--- a/view/index.html
+++ b/view/index.html
@@ -30,7 +30,7 @@ Including:
   
 
   <!-- Custom Styles -->
-  <link rel="stylesheet" href="/view/style.css">
+  <link rel="stylesheet" href="view/style.css">
 </head>
 
 <body>
@@ -193,6 +193,6 @@ This method is best utilized when working at a 10* AN (Adult Novelties Shop) sin
 
 
   <!-- Project -->
-  <script src="/view/main.js"></script>
+  <script src="view/main.js"></script>
 </body>
 </html>
